css/main.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300');


body {
    padding-top: 10px;
    padding-bottom: 50px;
    font-size: 15pt;
    color: #333;
    font-family: 'Open Sans', sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #000;
}

strong,
b {
    color: #000;
}

h1 small {
    color: #777;
}


footer {
    padding: 5px 0;
    border-top: 1px solid #ccc;
    color: #777;
}

footer * {
    font-size: 10pt;
}

form {
    margin-bottom: 20px;
}

label {
    font-weight: inherit;
}


dl {
    margin-bottom: 10px;
}

dd>p {
    margin-bottom: 0px;
}

ul {
    list-style-type: circle;
}

/* TEMPLATE */

.starter-template {
    padding: 0 5px 40px 5px;
}

.page-header {
    border-bottom-style: solid;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.page-header h1 {
    margin: 0;
}

.thumbnail {
    border: 1px solid #aaa;
}

.btn {
    border: 1px solid #aaa;
}

/* MENU */

.navbar-nav {
    float: left;
    margin: 0;
}

.navbar {
    border-radius: 4px;
}

.navbar-default {
    background-color: #fff;
    border-color: #fff;
    border-bottom: 1px solid #ccc;
    color: #000;
}


#navbar .nav {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    margin: 0;
    padding: 0;
}

.navbar-nav>li {
    float: left;
}

.navbar-default .navbar-nav>li>a {
    font-size: 26px;
    color: #777;
    border-bottom: 1px solid #fff;
    padding-top: 15px;
    padding-bottom: 15px;
}

.navbar-default .navbar-nav>.active>a,
.navbar-right>li>a {
    color: inherit;
    background-color: #fff;
    border-bottom: 1px solid #000;
    font-weight: bold;
}


.navbar-default .navbar-nav a:hover,
.navbar-default .navbar-nav .active a:hover {
    background-color: #fff;
    color: inherit;
    border-bottom: 1px solid #000;
}



/* CONTACT */

.contact-list {
    margin-top: 20px;
}

.contact-item {
    margin-bottom: 24px;
}

.contact-item strong {
    display: block;
    color: #000;
    margin-bottom: 2px;
}

/* CV */


dl.dl-horizontal dt {
    color: #777;
    font-weight: inherit;
}


section#cv>article>header>h3 {
    border-bottom: 1px solid rgb(240, 240, 240);
    margin-top: 40px;
    margin-bottom: 20px;
}

a.older-experience-toggle {
    color: #777;
}

/* PRINT */

@media print {
    body {
        font-size: 11pt;
        padding: 0;
        color: #000;
    }

    a {
        color: #000;
        text-decoration: none;
    }

    a[href]::after {
        content: none;
    }

    .starter-template {
        padding: 0;
    }

    .page-header {
        margin-top: 0;
    }

    section#cv>article>header>h3 {
        margin-top: 20px;
        margin-bottom: 10px;
    }

    #older-experience {
        display: block !important;
    }
}

